# valkey-redis-compat

./: .gitignore  LICENSE  README.md  README.ru.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
redis/: __init__.py  backoff.py  client.py  cluster.py  connection.py  credentials.py  exceptions.py  lock.py  retry.py  sentinel.py  typing.py  utils.py
redis/asyncio/: __init__.py  client.py  cluster.py  connection.py  lock.py  retry.py  sentinel.py  utils.py
redis/commands/: __init__.py  cluster.py  core.py  helpers.py  redismodules.py  sentinel.py  valkeymodules.py
redis/commands/bf/: __init__.py  commands.py  info.py
redis/commands/graph/: __init__.py  commands.py  edge.py  exceptions.py  execution_plan.py  node.py  path.py  query_result.py
redis/commands/json/: __init__.py  _util.py  commands.py  decoders.py  path.py
redis/commands/search/: __init__.py  _util.py  aggregation.py  commands.py  document.py  field.py  indexDefinition.py  query.py  querystring.py  reducers.py  result.py  suggestion.py
redis/commands/timeseries/: __init__.py  commands.py  info.py  utils.py
tests/: test_shim.py
